examples/fail/application_with_non_function.uplp
-- test: error { "category": "Type.mismatch", "metadata": { "t1": "Num", "t2": "Num -> ?0" } }
let a = 1 in a 5